test/files/neg/parser-errors.scala
abstract class A1 { lazy val foo: Int }
abstract class A2 { val Some(x)       }
abstract class A3 { var x = _         }
abstract class A4 { val x: Int = _    }
abstract class A5 { var Some(x) = _   }
