test/files/neg/parser-errors.check
parser-errors.scala:1: error: lazy values may not be abstract
abstract class A1 { lazy val foo: Int }
                             ^
parser-errors.scala:2: error: '=' expected but '}' found.
abstract class A2 { val Some(x)       }
                                      ^
parser-errors.scala:3: error: unbound placeholder parameter
abstract class A3 { var x = _         }
                            ^
parser-errors.scala:4: error: unbound placeholder parameter
abstract class A4 { val x: Int = _    }
                                 ^
parser-errors.scala:5: error: unbound placeholder parameter
abstract class A5 { var Some(x) = _   }
                                  ^
5 errors found
